--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.0",
+    "gh-pages": "^6.1.0",
     "postcss": "^8.4.5",
     "tailwindcss": "^3.0.7"
   }
